[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/bgScroll.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Backgrounds/blue.png" type="Texture" id=3]
[ext_resource path="res://assets/PNG/Stars/starBig.png" type="Texture" id=4]
[ext_resource path="res://GameOver/GameOver.gd" type="Script" id=5]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1600, 900 )

[node name="background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -1, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 900 )

[node name="StarParticles" type="CPUParticles2D" parent="ParallaxBackground/ParallaxLayer/background1"]
position = Vector2( 105, 0.4 )
amount = 20
lifetime = 3.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 105, 1 )
direction = Vector2( 0, 1 )
spread = 1.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.6
angle = 50.0
angle_random = 0.5
scale_amount = 0.1
scale_amount_random = 0.24
color_ramp = SubResource( 7 )

[node name="TileMap" type="TileMap" parent="ParallaxBackground"]
format = 1

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 367.0
margin_top = 95.0
margin_right = 655.0
margin_bottom = 176.0
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Score" type="Label" parent="."]
margin_left = 284.0
margin_top = 195.0
margin_right = 350.0
margin_bottom = 212.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "SCORE"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="."]
margin_left = 547.0
margin_top = 194.0
margin_right = 613.0
margin_bottom = 211.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "HIGH"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="."]
margin_left = 238.0
margin_top = 267.0
margin_right = 425.0
margin_bottom = 323.0

[node name="Label" type="Label" parent="RetryButton"]
margin_right = 188.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "RETRY"
align = 1
valign = 1

[node name="LeaderboardButton" type="Button" parent="."]
margin_left = 565.0
margin_top = 268.0
margin_right = 795.0
margin_bottom = 324.0

[node name="Label" type="Label" parent="LeaderboardButton"]
margin_right = 230.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "LEADERBOARDS"
align = 1
valign = 1

[node name="MenuButton" type="Button" parent="."]
margin_left = 391.0
margin_top = 358.0
margin_right = 621.0
margin_bottom = 414.0

[node name="Label" type="Label" parent="MenuButton"]
margin_right = 230.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "MAIN MENU"
align = 1
valign = 1

[node name="ExitButton" type="Button" parent="."]
margin_left = 392.0
margin_top = 445.0
margin_right = 622.0
margin_bottom = 501.0

[node name="Label" type="Label" parent="ExitButton"]
margin_right = 230.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "EXIT SESSION"
align = 1
valign = 1

[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
